Closes #2160, #2176: AZ Navbar Fullscreen (mobile): Updates to ensure all primary nav items are visible (#2177)
* Make requested changes to SCSS, JS, and HTML for mobile nav

* Remove .nav-link hover styles that appear unnecessary

* Prevent .nav-link hover styles for mobile nav

* Refactor handling of mobile footer heading

* Update aria-label for top mobile footer button

* Fix focus-visible styling of back button

* Remove active styling for footer buttons

* Remove unnecessary active nav icon variant for footer

--- a/scss/custom/_navbar-fullscreen.scss
+++ b/scss/custom/_navbar-fullscreen.scss
@@ -661,11 +661,6 @@
       outline: 0;
       box-shadow: inset 0 0 0 var(--az-navbar-fullscreen-modal-focus-ring-width) var(--az-navbar-fullscreen-modal-focus-ring-color);
     }
-
-    &:hover {
-      color: var(--bs-nav-link-hover-color);
-      background-color: transparent;
-    }
   }
 
   .nav-link-text {
@@ -865,16 +860,15 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
-  overflow: hidden;
   --az-navbar-fullscreen-back-icon: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42'><g transform='translate(1 1)'><circle fill='none' stroke='#{$white}' stroke-width='2' cx='20' cy='20' r='20' transform='translate(0 40) rotate(-90)'/><path fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' d='M-23110.98-11472l10,10-10,10' transform='translate(23127.197 11482)'/></g></svg>"))};
-  --az-navbar-fullscreen-back-icon-hover: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='41.88' height='41.88' viewBox='0 0 41.88 41.88'><circle fill='none' stroke='#{$sky}' stroke-width='3' cx='20.94' cy='20.94' r='19.44'/><path fill='none' stroke='#{$sky}' stroke-width='3' stroke-linecap='round' d='M17.26 11.22l9.72 9.72-9.72 9.72'/></svg>"))};
-  // https://fonts.google.com/icons?icon.style=Rounded&icon.set=Material+Symbols&icon.size=24&icon.color=%23AB0520&selected=Material+Symbols+Rounded:expand_circle_down:FILL@1;wght@400;GRAD@0;opsz@24&icon.query=expand+ci
   --az-navbar-fullscreen-back-icon-active: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='#{$sky}'><path d='m480-453-95-95q-11-11-27.5-11T329-548q-12 12-12 28.5t12 28.5l123 123q12 12 28 12t28-12l124-124q12-12 11.5-28T631-548q-12-11-28-11.5T575-548l-95 95Zm0 373q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z'/></svg>"))};
-  // https://fonts.google.com/icons?icon.style=Rounded&icon.set=Material+Symbols&icon.size=24&icon.color=%23AB0520&selected=Material+Symbols+Rounded:expand_circle_down:FILL@0;wght@400;GRAD@0;opsz@24&icon.query=expand+ci
   --az-navbar-fullscreen-back-icon-active-child: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='#{$sky}'><path d='m480-453-95-95q-11-11-27.5-11T329-548q-12 12-12 28.5t12 28.5l123 123q12 12 28 12t28-12l124-124q12-12 11.5-28T631-548q-12-11-28-11.5T575-548l-95 95Zm0 373q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z'/></svg>"))};
 
   .navbar-az-fullscreen-actions {
     --bs-nav-link-padding-y: 12px;
+    justify-content: center;
+    margin-top: 18px;
+    margin-bottom: 18px;
 
     .nav-item:not(:last-child) > .nav-link {
       top: 0;
@@ -912,6 +906,14 @@
     .nav-item {
       margin-right: 0;
     }
+
+    .nav-link:hover {
+      color: var(--bs-nav-link-color);
+    }
+
+    .nav-link-text {
+      pointer-events: none;
+    }
   }
 
   .navbar-az-fullscreen-modal-menu-nav-col-primary {
@@ -921,7 +923,7 @@
       top: 0;
       z-index: 2;
       display: block;
-      height: 2px;
+      height: 1px;
       content: "";
       background-color: var(--az-navbar-fullscreen-modal-menu-separator-color);
     }
@@ -933,15 +935,11 @@
     --az-navbar-fullscreen-nav-toggle-padding-y: 6px;
     margin-right: 0;
     margin-left: 0;
-    border-bottom: 2px solid var(--az-navbar-fullscreen-modal-menu-separator-color);
-
-    .nav-item:not(:last-child) {
-      border-width: 2px;
-    }
+    border-bottom: 1px solid var(--az-navbar-fullscreen-modal-menu-separator-color);
 
     .nav-link {
-      padding-top: 16px;
-      padding-bottom: 16px;
+      padding-top: 12px;
+      padding-bottom: 12px;
       font-size: 38px;
       line-height: 1em;
       letter-spacing: .38px;
@@ -1001,9 +999,9 @@
     padding: 8px 16px 8px 0;
     color: var(--bs-white);
     border: 0;
+    @include border-radius(2px);
 
     &:focus-visible {
-      @include border-radius(2px);
       outline: 0;
       box-shadow: 0 0 0 var(--az-navbar-fullscreen-focus-ring-width) var(--az-navbar-fullscreen-focus-ring-color);
     }
@@ -1024,10 +1022,6 @@
       background-size: 100% 100%;
       border: 0;
       transform: rotate(180deg);
-    }
-
-    &:hover::before {
-      background-image: var(--az-navbar-fullscreen-back-icon-hover);
     }
 
     span {
@@ -1070,9 +1064,9 @@
 }
 
 .navbar-az-fullscreen-mobile-footer-btn {
-  --az-navbar-fullscreen-modal-footer-navbar-padding-y: 16px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 12px 22px 10px;
+  border-right: 0;
+  border-left: 0;
 
   &:focus-visible {
     @include border-radius(2px);
@@ -1094,7 +1088,6 @@
       padding-top: 0;
       padding-bottom: 0;
       margin-right: 0;
-      margin-bottom: 4px;
       color: var(--bs-navbar-brand-color);
       pointer-events: none;
     }
@@ -1109,9 +1102,10 @@
   }
 
   .navbar-az-fullscreen-mobile-footer-btn-icon {
-    --az-navbar-fullscreen-nav-toggle-size: 38px;
-    --az-navbar-fullscreen-nav-toggle-padding-y: 4px;
+    --az-navbar-fullscreen-nav-toggle-icon: #{escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='10.828' height='18.827' viewBox='0 0 10.828 18.827'><path fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' d='M-23110.982-11472l8,8-8,8' transform='translate(23112.396 11473.415)'/></svg>"))};
+    --az-navbar-fullscreen-nav-toggle-size: 16px;
     padding-left: 20px;
+    margin-right: -6px;
     pointer-events: none;
   }
 }
